# Toaster

./: .gitignore  .gitmodules  CMakeLists.txt  Gen-CMake.bat  Gen-PreMake.bat  README.md  Toaster.sln  premake5.lua
SandBox/: CMakeLists.txt  SandBox.vcxproj  SandBox.vcxproj.filters  Tst_Prof-Startup.json  Tst_Prof-Termination.json  imgui.ini
SandBox/assets/shaders/: BasicShader.vert.glsl  FlatShader.frag.glsl  FlatShader.vert.glsl  FlatTextureShader.glsl
SandBox/src/: ParticleSystem.cpp  ParticleSystem.hpp  ParticleSystem3D.cpp  ParticleSystem3D.hpp  Player.cpp  Player.hpp  Sandbox2D.cpp  Sandbox2D.hpp  Sandbox3D.cpp  Sandbox3D.hpp  SandboxApp.cpp
SandBox/src/Utils/: Maths.cpp  Maths.hpp  Random.hpp
Toaster/: CMakeLists.txt  Toaster.vcxproj  Toaster.vcxproj.filters
Toaster/res/shaders/: BasicShader.frag  BasicShader.vert  FlatTextureShader.glsl  LightingShader.glsl  LineShader.frag.glsl  LineShader.vert.glsl  MeshShader.frag.glsl  MeshShader.glsl  MeshShader.vert.glsl  SkyBoxShader.frag.glsl  SkyBoxShader.vert.glsl
Toaster/src/: Toaster.h  tstpch.cpp  tstpch.h
Toaster/src/Toaster/: Application.cpp  Application.hpp  CameraController.cpp  CameraController.hpp  Core.hpp  EntryPoint.hpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  MouseCodes.hpp  Window.hpp
Toaster/src/Toaster/Asset/: Asset.cpp  Asset.hpp
Toaster/src/Toaster/Core/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.hpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.hpp  Log.cpp  Log.hpp  MouseCodes.hpp  Time.cpp  Time.hpp  Window.hpp
Toaster/src/Toaster/Debug/: Instrumentor.h
Toaster/src/Toaster/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Toaster/src/Toaster/Input/Platform/Windows/: WindowsInput.cpp  WindowsInput.hpp
Toaster/src/Toaster/Layers/: OpenGlTestLayer.cpp  OpenGlTestLayer.h
Toaster/src/Toaster/Renderer/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  DebugRenderer.cpp  DebugRenderer.hpp  Framebuffer.cpp  Framebuffer.hpp  FrustumCulling.cpp  FrustumCulling.hpp  Light.hpp  Material.cpp  Material.hpp  MaterialSystem.cpp  MaterialSystem.hpp  Mesh.cpp  Mesh.hpp  MeshRenderer.cpp  MeshRenderer.hpp  RenderCommand.cpp  RenderCommand.hpp  RenderCore.cpp  RenderCore.hpp  RenderPipeline.cpp  RenderQueue.cpp  RenderQueue.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  Renderer3D.cpp  Renderer3D.hpp  RendererAPI.cpp  RendererAPI.hpp  RenderingContext.hpp  Shader.cpp  Shader.hpp  SkyBoxRenderer.cpp  SkyBoxRenderer.hpp  Texture.cpp  (+4 more)
Toaster/src/Toaster/Renderer/Loaders/: BlendLoader.cpp  BlendLoader.hpp  FbxLoader.cpp  FbxLoader.hpp  GltfLoader.cpp  GltfLoader.hpp  ObjLoader.cpp  ObjLoader.hpp
Toaster/src/Toaster/Scene/: Components.cpp  Components.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  SceneSerializer.cpp  SceneSerializer.hpp  ScriptableEntity.hpp
Toaster/src/Toaster/Util/: MathUtil.hpp  PlatformUtils.hpp
Toaster/src/Toaster/Window/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.hpp
Toaster/src/Toaster/imgui/: ImGuiBuild.cpp  ImguiLayer.cpp  ImguiLayer.hpp
Toaster/src/Toaster/platform/OpenGl/: ImguiOpenGlRenderer.cpp
Toaster/src/Toaster/platform/windows/: WindowsWindow.cpp  WindowsWindow.hpp
Toaster/src/platform/OpenGl/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLImage.cpp  OpenGLImage.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLRenderingContext.cpp  OpenGLRenderingContext.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp  OpenGlTestLayer.cpp  OpenGlTestLayer.h
Toaster/src/platform/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanImage.cpp  VulkanRenderingContext.cpp  VulkanRenderingContext.hpp
Toaster/src/platform/Windows/: WindowsInput.cpp  WindowsInput.hpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.hpp
ToasterEditor/: CMakeLists.txt  ToasterEditor.vcxproj  ToasterEditor.vcxproj.filters  Tst_Prof-Startup.json  Tst_Prof-Termination.json  imgui.ini
ToasterEditor/res/models/: orbo_mesh.fbx
ToasterEditor/res/models/curtains/: Curtains.mtl
ToasterEditor/res/models/startup_scene/: Toaster_StartupScene.mtl
ToasterEditor/res/scenes/: NormalMapTest.toast  Orbo.toast  Sponza.toast  T.toast  TerrainTest.toast  Test.toast  idk.toast  test2.toast
ToasterEditor/res/shaders/: BasicShader.frag.glsl  FlatTextureShader.glsl  TestShader.glsl
ToasterEditor/src/: ToasterEditorApp.cpp  ToasterEditorLayer.cpp  ToasterEditorLayer.hpp
ToasterEditor/src/panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
ToasterEditor/src/rayTracing/: RayTracerLayer.cpp  RayTracerLayer.hpp
ToasterEditor/src/util/: ParticleSystem.cpp  ParticleSystem.hpp  Random.cpp  Random.hpp
bin-int/Debug-windows-x86_64/Toaster/: Toaster.dll.recipe  vc143.idb
bin-int/Debug-windows-x86_64/Toaster/Toaster.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  (+4 more)
dependencies/: CMakeLists.txt
dependencies/Assimp/: Assimp.vcxproj  Assimp.vcxproj.filters  premake5.lua
dependencies/Assimp/include/assimp/: XmlParser.h
dependencies/Entt/: CMakeLists.txt
dependencies/GLFW/: premake5.lua
dependencies/Glad/: glad.vcxproj  glad.vcxproj.filters  premake5.lua
dependencies/ImGui/: CMakeLists.txt  ImGui.vcxproj  imconfig.h  imgui.h  premake5.lua
dependencies/ImGui/backends/: imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h
dependencies/Tinyobjloader/: CMakeLists.txt  TinyObjLoader.vcxproj  premake5.lua
dependencies/YamlCpp/: YamlCpp.vcxproj  YamlCpp.vcxproj.filters  premake5.lua
dependencies/glm/: glm.vcxproj  glm.vcxproj.filters  premake5.lua
dependencies/spdlog/: CMakeLists.txt  premake5.lua
dependencies/spdlog/include/spdlog/: async.h  async_logger-inl.h
dependencies/spdlog/include/spdlog/cfg/: helpers-inl.h
dependencies/spdlog/include/spdlog/details/: periodic_worker-inl.h  registry.h
dependencies/stbImage/: CMakeLists.txt  premake5.lua  stbImage.vcxproj
